Updating UI with tabs and spacing fixes

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ticket Suggestion App",
+  "name": "Mentor's Solutions App",
   "author": {
-    "name": "Bulleit Shooters",
+    "name": "SoS Apps",
     "email": "epritchard@zendesk.com",
     "url": "http://www.github.com/epritchard"
   },
