--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,11 @@
   "private": true,
   "location": "ticket_sidebar",
   "version": "1.0",
-  "frameworkVersion": "1.0"
+  "frameworkVersion": "1.0",
+  "parameters": [
+    {
+      "name": "About field ID",
+      "type": "number"
+    }
+  ]
 }
