--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mentors Solutions App",
+  "name": "Mentor's Solutions App",
   "author": {
     "name": "SoS Apps",
     "email": "epritchard@zendesk.com",
