Providing default About Field ID
Allows people to skip the setting for including an About Field ID.

--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,9 @@
   "frameworkVersion": "1.0",
   "parameters": [
     {
-      "name": "About Field ID",
-      "type": "number"
+      "name": "about_field_id",
+      "type": "number",
+      "default": "0"
     },
     {
       "name": "nb_entries",
